--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,8 @@ remappings = [
     "forge-std=lib/forge-std/src",
 ]
 
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+[rpc_endpoints]
+mumbai = "${MUMBAI_RPC_URL}"
+
+[etherscan]
+mumbai = { key = "${ETHERSCAN_API_KEY}" }
