--- a/foundry.toml
+++ b/foundry.toml
@@ -9,6 +9,8 @@ remappings = [
 
 [rpc_endpoints]
 mumbai = "${MUMBAI_RPC_URL}"
+polygon = "${POLYGON_RPC_URL}"
 
 [etherscan]
 mumbai = { key = "${ETHERSCAN_API_KEY}" }
+polygon = { key = "${ETHERSCAN_API_KEY}" }
